# docs/swagger.yaml
@@ -57,6 +57,21 @@ paths:
       responses:
         200:
           description: OK
+  /download/youtube:
+    post:
+      summary: Download a YouTube video
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                url:
+                  type: string
+      responses:
+        200:
+          description: OK       
   /download/all:
     post:
       summary: Download a video from various platforms like YouTube, Instagram, etc.
