# routes/v1/index.js
@@ -5,6 +5,7 @@ import tiktokController from "../../controllers/v1/tiktokController.js";
 import generalController from "../../controllers/v1/generalController.js";
 import fbController from "../../controllers/v1/fbController.js";
 import igController from "../../controllers/v1/igController.js";
+import ytController from "../../controllers/v1/ytController.js";
 
 const router = express.Router();
 
@@ -21,6 +22,7 @@ router.get("/status", (req, res) => {
 
 router.post("/download/facebook", downloadLimiter, fbController);
 router.post("/download/instagram", downloadLimiter, igController);
+router.post("/download/youtube", downloadLimiter, ytController);
 router.post("/download/tiktok", downloadLimiter, tiktokController);
 router.post("/download/all", downloadLimiter, generalController);
 
